refactor: padronize api responses
